syntax = "proto3";

package home;
option go_package = "../../pkg/pb";

message GetFlatsInHouseRequest {
    int32 id = 1;
}

message GetFlatsInHouseResponse {
    repeated Flat flats = 1;
}

message Flat {
    int32 id = 1;
    int32 house_id = 2;
    int32 price = 3;
    int32 rooms = 4;
    string status = 5;
}

enum Status {
    created = 0;
    approved = 1;
    declined = 2;
    onModeration = 3;
}