syntax = "proto3";

package home;
option go_package = "../../pkg/pb";

import "create-house.proto";
import "flats-in-house.proto";
import "subscribe-house.proto";
import "update-flat.proto";
import "create-flat.proto";

service HouseService {
    rpc CreateHouse(CreateHouseRequest) returns (CreateHouseResponse);
    rpc GetFlatsInHouse(GetFlatsInHouseRequest) returns (GetFlatsInHouseResponse);
    rpc SubscribeToHouse(SubscribeToHouseRequest) returns (SubscribeToHouseResponse);
    rpc CreateFlat(CreateFlatRequest) returns (CreateFlatResponse);
    rpc UpdateFlat(UpdateFlatRequest) returns (UpdateFlatResponse);
}

